# locisimiles

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
api/: index.html
api/custom-pipelines/: index.html
api/document/: index.html
api/evaluator/: index.html
api/generators/: index.html
api/judges/: index.html
api/pipelines/: index.html
cli/: index.html
data/: labels.csv
development/: index.html
docs/: cli.md  development.md  examples.md  getting-started.md  index.md
docs/api/: custom-pipelines.md  document.md  evaluator.md  generators.md  index.md  judges.md  pipelines.md
examples/: example.ipynb  example.py  example_contextual_bert.ipynb  example_contextual_bert.py  example_document_features.ipynb  example_rule_based.ipynb  example_word2vec.ipynb  ground_truth.csv  hieronymus_samples.csv  hieronymus_sentencized.csv  hieronymus_sentencized.txt  index.html  requirements.txt  results.csv  results_contextual_bert.csv  results_contextual_bert.json  run_contextual_bert_smoketest.py  run_word2vec_generic_smoketest.py  vergil_samples.csv
getting-started/: index.html
search/: search_index.json
src/locisimiles/: __init__.py  cli.py  datasets.py  document.py  evaluator.py  pipeline.py
src/locisimiles/data/: __init__.py  stoplist.txt
src/locisimiles/data/examples/: __init__.py
src/locisimiles/pipeline/: __init__.py  _types.py  classification.py  contextual_retrieval.py  contextual_two_stage.py  pipeline.py  retrieval.py  rule_based.py  two_stage.py  word2vec.py
src/locisimiles/pipeline/generator/: __init__.py  _base.py  contextual_bert.py  embedding.py  exhaustive.py  rule_based.py  word2vec.py
src/locisimiles/pipeline/judge/: __init__.py  _base.py  classification.py  identity.py  threshold.py
src/locisimiles/training/: __init__.py  artifacts.py  base.py
src/locisimiles/training/classification/: __init__.py
src/locisimiles/training/embedding/: __init__.py
src/locisimiles/training/preprocess/: __init__.py  text.py
src/locisimiles/training/rule_based/: __init__.py
src/locisimiles/training/word2vec/: __init__.py  trainer.py
src/locisimiles_gui/: app.py  config_stage.py  results_page.py  results_stage.py  upload_stage.py  utils.py
stylesheets/: extra.css
tests/: conftest.py  test_classification.py  test_cli.py  test_contextual_bert.py  test_datasets.py  test_document.py  test_e2e_pipelines.py  test_evaluator.py  test_generator_judge_combos.py  test_generators.py  test_gui.py  test_judges.py  test_pipelines.py  test_results_io.py  test_retrieval.py  test_rule_based.py  test_two_stage.py  test_types.py  test_word2vec.py
