[project]
name = "locisimiles"
version = "0.1.0"
description = ""
authors = [
    {name = "Julian Schelb",email = "julian.schelb@uni-konstanz.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "locisimiles", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
