[project]
name = "locisimiles"
version = "0.3.6"
description = "LociSimiles is a Python package for finding intertextual links in Latin literature using pre-trained language models."
authors = [
    {name = "Julian Schelb",email = "julian.schelb@uni-konstanz.de"},
    {name = "Michael Wittweiler",email = "michael.wittweiler@sglp.uzh.ch"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=1.24.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "torch (>=2.0.0,<3.0.0)",
    "sentence-transformers (>=3.0.0,<6.0.0)",
    "transformers (>=4.30.0,<5.0.0)",
    "chromadb (>=0.4.0,<2.0.0)",
    "accelerate (>=0.20.0)",
]

[project.optional-dependencies]
gui = [
    "gradio (>=5.49.1)",
    "pydantic (==2.10.6)",
    "audioop-lts (>=0.2.1,<0.3.0) ; python_version >= '3.13'",
]
rule-based = [
    "spacy (>=3.5.0,<4.0.0)",
]
dev = [
    "pytest (>=8.0.0,<10.0.0)",
    "pytest-cov (>=4.0.0)",
    "poethepoet (>=0.24.0)",
    "mkdocs (>=1.5.0)",
    "mkdocs-material (>=9.0.0)",
    "mkdocstrings[python] (>=0.24.0)",
]

[project.scripts]
locisimiles = "locisimiles.cli:main"
locisimiles-gui = "locisimiles_gui.app:main"

[tool.poetry]
packages = [
    {include = "locisimiles", from = "src"},
    {include = "locisimiles_gui", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    # pydantic v1 compat layer uses deprecated ForwardRef._evaluate on Python 3.13+
    "ignore::DeprecationWarning:pydantic",
]

[tool.poe.tasks]
test = "pytest"
test-cov = "pytest --cov=locisimiles --cov-report=term-missing"
docs = "mkdocs serve"
docs-build = "mkdocs build"
docs-deploy = "mkdocs gh-deploy --force"
