[project]
name = "locisimiles"
version = "0.3.6"
description = "LociSimiles is a Python package for finding intertextual links in Latin literature using pre-trained language models."
authors = [
    {name = "Julian Schelb",email = "julian.schelb@uni-konstanz.de"},
    {name = "Michael Wittweiler",email = "michael.wittweiler@sglp.uzh.ch"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=1.24.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "torch (>=2.0.0,<3.0.0)",
    "sentence-transformers (>=3.0.0,<6.0.0)",
    "transformers (>=4.30.0,<5.0.0)",
    "chromadb (>=0.4.0,<2.0.0)",
    "accelerate (>=0.20.0)",
]

[project.optional-dependencies]
gui = [
    "gradio (>=5.49.1)",
    "pydantic (==2.10.6)",
    "audioop-lts (>=0.2.1,<0.3.0) ; python_version >= '3.13'",
]
rule-based = [
    "spacy (>=3.5.0,<4.0.0)",
]
dev = [
    "pytest (>=8.0.0,<10.0.0)",
    "pytest-cov (>=4.0.0)",
    "poethepoet (>=0.24.0)",
    "mkdocs (>=1.5.0)",
    "mkdocs-material (>=9.0.0)",
    "mkdocstrings[python] (>=0.24.0)",
    "ruff (>=0.8.0)",
    "mypy (>=1.10.0)",
    "pre-commit (>=3.5.0)",
]

[project.scripts]
locisimiles = "locisimiles.cli:main"
locisimiles-gui = "locisimiles_gui.app:main"

[tool.poetry]
packages = [
    {include = "locisimiles", from = "src"},
    {include = "locisimiles_gui", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    # pydantic v1 compat layer uses deprecated ForwardRef._evaluate on Python 3.13+
    "ignore::DeprecationWarning:pydantic",
]

[tool.poe.tasks]
test = "pytest"
test-cov = "pytest --cov=locisimiles --cov-report=term-missing"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/locisimiles/"
docs = "mkdocs serve"
docs-build = "mkdocs build"
docs-deploy = "mkdocs gh-deploy --force"

# ---------- Ruff ----------

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "E702",   # multiple-statements-on-one-line (used in test mocks)
    "SIM108", # ternary operator (readability)
    "B905",   # zip strict (py310 compat)
    "UP006",  # non-PEP585 annotation — modernise Dict→dict etc. later
    "UP007",  # X | Y union syntax (needs runtime support)
    "UP035",  # deprecated typing imports — modernise later
    "UP045",  # Optional[X] → X | None — modernise later
]

[tool.ruff.lint.isort]
known-first-party = ["locisimiles", "locisimiles_gui"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]              # relax bugbear & simplify in tests
"src/**/__init__.py" = ["F401"]       # re-exports look like unused imports

# ---------- Mypy ----------

[tool.mypy]
python_version = "3.10"
warn_return_any = false              # too noisy with base-class delegation
warn_unused_configs = true
disallow_untyped_defs = false        # gradual adoption
check_untyped_defs = true
ignore_missing_imports = true        # third-party stubs not always available
exclude = ["tests/", "examples/"]

[[tool.mypy.overrides]]
module = [
    "locisimiles.pipeline.generator.rule_based",
    "locisimiles.pipeline.rule_based",
    "locisimiles_gui.*",
]
# Rule-based module uses lazy-loaded optional models (typed None initially);
# GUI code has Gradio typing gaps.  Tighten once stubs improve.
disable_error_code = ["attr-defined", "assignment"]

[[tool.mypy.overrides]]
module = "locisimiles.evaluator"
# Evaluator mixes pandas DataFrames with plain dicts in return types;
# needs a dedicated typing pass.
disable_error_code = ["attr-defined", "arg-type", "dict-item"]

[[tool.mypy.overrides]]
module = [
    "locisimiles.pipeline.generator.embedding",
    "locisimiles.pipeline.generator.exhaustive",
]
# ChromaDB stubs + str|int segment IDs need union-narrowing work.
disable_error_code = ["arg-type", "union-attr", "index"]

[[tool.mypy.overrides]]
module = [
    "locisimiles.pipeline.two_stage",
    "locisimiles.pipeline.classification",
    "locisimiles.pipeline.retrieval",
]
# Properties delegate to base-typed generator/judge; needs protocol types.
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "locisimiles.cli"
disable_error_code = ["arg-type"]
